Change %2F to / in Travis example; #67

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         </p>
 
         <p>
-            <a title="Travis CI" href="https://travis-ci.org/rails/rails"><img src="http://img.shields.io/travis-ci/rails%2Frails.png" /></a>
-            <code>[![Travis CI](http://img.shields.io/travis-ci/rails%2Frails.png)](https://travis-ci.org/rails/rails)</code>
+            <a title="Travis CI" href="https://travis-ci.org/rails/rails"><img src="http://img.shields.io/travis-ci/rails/rails.png" /></a>
+            <code>[![Travis CI](http://img.shields.io/travis-ci/rails/rails.png)](https://travis-ci.org/rails/rails)</code>
         </p>
 
         <p>
