--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
     </style>
   </head>
   <body>
-    <img src="shield.jpg" class="shield" />
+    <img src="shield.jpg" class="shield" alt="Shield" width="400" height="564">
 
     <a href="https://github.com/gittip/shields.io"><img style="position: fixed;
       top: 0; right: 0; border: 0; z-index: 2;"
       src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
-      alt="Fork me on GitHub"></a>
+      alt="Fork me on GitHub" width="149" height="149">
+    </a>
 
     <div class="wrapper">
 
@@ -75,23 +76,23 @@
 
       <div class="services">
         <p>
-            <a href="https://coveralls.io/r/resque/resque" title="Coveralls"><img src="http://img.shields.io/coveralls/resque/resque.png" /></a>
-            <code>[![Coveralls](http://img.shields.io/coveralls/resque/resque.png)](https://coveralls.io/r/resque/resque)</code>
+          <a href="https://coveralls.io/r/resque/resque" title="Coveralls"><img src="http://img.shields.io/coveralls/resque/resque.png" alt="resque"></a>
+          <code>[![Coveralls](http://img.shields.io/coveralls/resque/resque.png)](https://coveralls.io/r/resque/resque)</code>
         </p>
 
         <p>
-            <a title="Gittip" href="https://www.gittip.com/JSFiddle/"><img src="http://img.shields.io/gittip/jsfiddle.png" /></a>
-            <code>[![Gittip](http://img.shields.io/gittip/jsfiddle.png)](https://www.gittip.com/JSFiddle/)</code>
+          <a title="Gittip" href="https://www.gittip.com/JSFiddle/"><img src="http://img.shields.io/gittip/jsfiddle.png" alt="jsfiddle"></a>
+          <code>[![Gittip](http://img.shields.io/gittip/jsfiddle.png)](https://www.gittip.com/JSFiddle/)</code>
         </p>
 
         <p>
-            <a title="Travis CI" href="https://travis-ci.org/rails/rails"><img src="http://img.shields.io/travis-ci/rails/rails.png" /></a>
-            <code>[![Travis CI](http://img.shields.io/travis-ci/rails/rails.png)](https://travis-ci.org/rails/rails)</code>
+          <a title="Travis CI" href="https://travis-ci.org/rails/rails"><img src="http://img.shields.io/travis-ci/rails/rails.png" alt="rails"></a>
+          <code>[![Travis CI](http://img.shields.io/travis-ci/rails/rails.png)](https://travis-ci.org/rails/rails)</code>
         </p>
 
         <p>
-            <a title="Generic" href="http://www.cheezwhiz.com/"><img src="http://img.shields.io/cheez/whiz.png?color=yellow" /></a>
-            <code>[![Generic](http://img.shields.io/cheez/whiz.png?color=yellow)](http://www.cheezwhiz.com/)></code>
+          <a title="Generic" href="http://www.cheezwhiz.com/"><img src="http://img.shields.io/cheez/whiz.png?color=yellow" alt="cheezwhiz"></a>
+          <code>[![Generic](http://img.shields.io/cheez/whiz.png?color=yellow)](http://www.cheezwhiz.com/)></code>
         </p>
       </div>
 
