Tweak font sizes.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       body {
         margin: 0;
         padding: 0;
-        font-family: Georgia, sans-serif;
+        font: 16px Georgia, sans-serif;
       }
       .wrapper {
         padding: 50px 50px 50px 500px;
@@ -32,7 +32,7 @@
       }
       code {
         white-space: nowrap;
-        font-size: smaller;
+        font-size: 0.7em;
       }
       pre {
         overflow: auto;
