Specify favicon in the html.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Shields as a Service - Shields.io</title>
+    <link rel="shortcut icon" href="favicon.ico">
     <style>
       body {
         margin: 0;
