Change title/h1 to "Badges as a Service"; #82

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Shields as a Service - Shields.io</title>
+    <title>Badges as a Service - Shields.io</title>
     <link rel="shortcut icon" href="favicon.ico">
     <style>
       body {
@@ -76,7 +76,7 @@
 
       <h1>Shields.io</h1>
 
-      <p>Shields as a Service &mdash; PNG &mdash; HTTP / HTTPS &mdash; CDN</p>
+      <p>Badges as a Service &mdash; PNG &mdash; HTTP / HTTPS &mdash; CDN</p>
 
       <h2>Supported Vendors</h2>
 
