--- a/sheet.html
+++ b/sheet.html
@@ -1,1 +1,1 @@
-<p><img src="img/build-passed.svg"><p><img src="img/build-passing.svg"><p><img src="img/dependencies-none.svg"><p><img src="img/cheez-whiz.svg"><p><img src="img/tips-per-week.svg"><p><img src="img/coverage.svg">
+<p><img src="img/build-passed.svg"><p><img src="img/build-passing.svg"><p><img src="img/dependencies-none.svg"><p><img src="img/dependencies-out-of-date.svg"><p><img src="img/cheez-whiz.svg"><p><img src="img/tips-per-week.svg"><p><img src="img/coverage.svg">
