website: Improve support for small viewports

--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,7 @@
 <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet'>
 <style>
 :root { text-align: center; font-family: Linux Libertine O, Vollkorn, serif; }
+code { white-space: pre-wrap; }
 code, input { padding: 0 4px; border: 1px solid grey; background: #eef; border-radius: 4px; }
 input { width: 5em; }
 hr { width: 40%; border-width: 1px 0 0 0; }
