Mention NPM and Packagist support.

--- a/web/index.html
+++ b/web/index.html
@@ -90,13 +90,22 @@ Use an underscore <code>_</code> if you want a space. Or, you know, use a space.
   <td><img src='/travis/joyent/node.svg' alt='Travis-CI'/></td>
   <td><code>http://gh-badges.herokuapp.com/travis/joyent/node.svg</code></td>
   </tr>
+  <tr><th> Gittip: </th>
+  <td><img src='/gittip/JSFiddle.svg' alt='Gittip'/></td>
+  <td><code>http://gh-badges.herokuapp.com/gittip/JSFiddle.svg</code></td>
+  </tr>
   <tr><th> Coveralls: </th>
   <td><img src='/coveralls/jekyll/jekyll.svg' alt='Coveralls'/></td>
   <td><code>http://gh-badges.herokuapp.com/coveralls/jekyll/jekyll.svg</code></td>
   </tr>
-  <tr><th> Gittip: </th>
-  <td><img src='/gittip/JSFiddle.svg' alt='Gittip'/></td>
-  <td><code>http://gh-badges.herokuapp.com/gittip/JSFiddle.svg</code></td>
+  </tr>
+  <tr><th> NPM: </th>
+  <td><img src='/npm/dm/localeval.svg' alt='Gittip'/></td>
+  <td><code>http://gh-badges.herokuapp.com/npm/dm/localeval.svg</code></td>
+  </tr>
+  <tr><th> Packagist: </th>
+  <td><img src='/packagist/dm/doctrine/orm.svg' alt='Gittip'/></td>
+  <td><code>http://gh-badges.herokuapp.com/packagist/dm/doctrine/orm.svg</code></td>
   </tr>
 </tbody></table>
 
