--- a/web/index.html
+++ b/web/index.html
@@ -100,11 +100,11 @@ Use an underscore <code>_</code> if you want a space. Or, you know, use a space.
   </tr>
   </tr>
   <tr><th> NPM: </th>
-  <td><img src='/npm/dm/localeval.svg' alt='Gittip'/></td>
+  <td><img src='/npm/dm/localeval.svg' alt='NPM'/></td>
   <td><code>http://gh-badges.herokuapp.com/npm/dm/localeval.svg</code></td>
   </tr>
   <tr><th> Packagist: </th>
-  <td><img src='/packagist/dm/doctrine/orm.svg' alt='Gittip'/></td>
+  <td><img src='/packagist/dm/doctrine/orm.svg' alt='Packagist'/></td>
   <td><code>http://gh-badges.herokuapp.com/packagist/dm/doctrine/orm.svg</code></td>
   </tr>
 </tbody></table>
