--- a/web/index.html
+++ b/web/index.html
@@ -107,6 +107,10 @@ Use an underscore <code>_</code> if you want a space. Or, you know, use a space.
   <td><img src='/packagist/dm/doctrine/orm.svg' alt='Packagist'/></td>
   <td><code>http://gh-badges.herokuapp.com/packagist/dm/doctrine/orm.svg</code></td>
   </tr>
+  <tr><th> NPM: </th>
+  <td><img src='/npm/v/npm.svg' alt='NPM'/></td>
+  <td><code>http://gh-badges.herokuapp.com/npm/v/npm.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2> Like This? </h2>
