website: inform of gem support.

--- a/web/index.html
+++ b/web/index.html
@@ -111,6 +111,10 @@ Use an underscore <code>_</code> if you want a space. Or, you know, use a space.
   <td><img src='/npm/v/npm.svg' alt='NPM'/></td>
   <td><code>http://gh-badges.herokuapp.com/npm/v/npm.svg</code></td>
   </tr>
+  <tr><th> Gem: </th>
+  <td><img src='/gem/v/formatador.svg' alt='Gem'/></td>
+  <td><code>http://gh-badges.herokuapp.com/gem/v/formatador.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2> Like This? </h2>
