Give metric approximation.

--- a/web/index.html
+++ b/web/index.html
@@ -62,7 +62,7 @@ I wanted a service for everyone. <br/>
 I made the GitHub Badge Service.
 </p>
 
-<img src='/:download-.5K-blue.svg' alt='Download: .5K'/>
+<img src='/:download-.8 kB-blue.svg' alt='Download: .5kB'/>
 
 <p>
 Here's how it works. <br/>
