--- a/web/index.html
+++ b/web/index.html
@@ -99,16 +99,16 @@ Use an underscore <code>_</code> if you want a space. Or, you know, use a space.
   <td><code>http://gh-badges.herokuapp.com/coveralls/jekyll/jekyll.svg</code></td>
   </tr>
   </tr>
-  <tr><th> NPM: </th>
-  <td><img src='/npm/dm/localeval.svg' alt='NPM'/></td>
+  <tr><th> npm: </th>
+  <td><img src='/npm/dm/localeval.svg' alt='npm'/></td>
   <td><code>http://gh-badges.herokuapp.com/npm/dm/localeval.svg</code></td>
   </tr>
   <tr><th> Packagist: </th>
   <td><img src='/packagist/dm/doctrine/orm.svg' alt='Packagist'/></td>
   <td><code>http://gh-badges.herokuapp.com/packagist/dm/doctrine/orm.svg</code></td>
   </tr>
-  <tr><th> NPM: </th>
-  <td><img src='/npm/v/npm.svg' alt='NPM'/></td>
+  <tr><th> npm: </th>
+  <td><img src='/npm/v/npm.svg' alt='npm'/></td>
   <td><code>http://gh-badges.herokuapp.com/npm/v/npm.svg</code></td>
   </tr>
   <tr><th> Gem: </th>
