--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <meta charset=utf-8>
 <title> Badge Service </title>
 <meta name='viewport' content='width=device-width,initial-scale=1'>
-<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet'>
+<link href='//fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet'>
 <style>
 :root { text-align: center; font-family: Linux Libertine O, Vollkorn, serif; }
 code { white-space: pre-wrap; }
