--- a/web/index.html
+++ b/web/index.html
@@ -66,7 +66,7 @@ I made the GitHub Badge Service.
 
 <p>
 Here's how it works. <br/>
-<code>http://gh-badges.herokuapp.com/:&lt;SUBJECT&gt;-&lt;STATUS&gt;-&lt;COLOR&gt;.svg</code><br/>
+<code>http://b.adge.me/:&lt;SUBJECT&gt;-&lt;STATUS&gt;-&lt;COLOR&gt;.svg</code><br/>
 Use two dashes <code>--</code> to have one dash as text. <br/>
 Use two underscores <code>__</code> to have one underscore as text. <br/>
 Use an underscore <code>_</code> if you want a space. Or, you know, use a space.
@@ -88,32 +88,32 @@ Use an underscore <code>_</code> if you want a space. Or, you know, use a space.
 <table><tbody>
   <tr><th> Travis: </th>
   <td><img src='/travis/joyent/node.svg' alt='Travis-CI'/></td>
-  <td><code>http://gh-badges.herokuapp.com/travis/joyent/node.svg</code></td>
+  <td><code>http://b.adge.me/travis/joyent/node.svg</code></td>
   </tr>
   <tr><th> Gittip: </th>
   <td><img src='/gittip/JSFiddle.svg' alt='Gittip'/></td>
-  <td><code>http://gh-badges.herokuapp.com/gittip/JSFiddle.svg</code></td>
+  <td><code>http://b.adge.me/gittip/JSFiddle.svg</code></td>
   </tr>
   <tr><th> Coveralls: </th>
   <td><img src='/coveralls/jekyll/jekyll.svg' alt='Coveralls'/></td>
-  <td><code>http://gh-badges.herokuapp.com/coveralls/jekyll/jekyll.svg</code></td>
+  <td><code>http://b.adge.me/coveralls/jekyll/jekyll.svg</code></td>
   </tr>
   </tr>
   <tr><th> npm: </th>
   <td><img src='/npm/dm/localeval.svg' alt='npm'/></td>
-  <td><code>http://gh-badges.herokuapp.com/npm/dm/localeval.svg</code></td>
+  <td><code>http://b.adge.me/npm/dm/localeval.svg</code></td>
   </tr>
   <tr><th> Packagist: </th>
   <td><img src='/packagist/dm/doctrine/orm.svg' alt='Packagist'/></td>
-  <td><code>http://gh-badges.herokuapp.com/packagist/dm/doctrine/orm.svg</code></td>
+  <td><code>http://b.adge.me/packagist/dm/doctrine/orm.svg</code></td>
   </tr>
   <tr><th> npm: </th>
   <td><img src='/npm/v/npm.svg' alt='npm'/></td>
-  <td><code>http://gh-badges.herokuapp.com/npm/v/npm.svg</code></td>
+  <td><code>http://b.adge.me/npm/v/npm.svg</code></td>
   </tr>
   <tr><th> Gem: </th>
   <td><img src='/gem/v/formatador.svg' alt='Gem'/></td>
-  <td><code>http://gh-badges.herokuapp.com/gem/v/formatador.svg</code></td>
+  <td><code>http://b.adge.me/gem/v/formatador.svg</code></td>
   </tr>
 </tbody></table>
 
