Added support for specific Travis CI branches.

--- a/web/index.html
+++ b/web/index.html
@@ -86,9 +86,13 @@ Use an underscore <code>_</code> if you want a space. Or, you know, use a space.
 <h2> Supported Services </h2>
 
 <table><tbody>
-  <tr><th> Travis: </th>
+  <tr><th> Travis (repo): </th>
   <td><img src='/travis/joyent/node.svg' alt='Travis-CI'/></td>
   <td><code>http://b.adge.me/travis/joyent/node.svg</code></td>
+  </tr>
+  <tr><th> Travis (branch): </th>
+  <td><img src='/travis/joyent/node/v0.6.svg' alt='Travis-CI'/></td>
+  <td><code>http://b.adge.me/travis/joyent/node/v0.6.svg</code></td>
   </tr>
   <tr><th> Gittip: </th>
   <td><img src='/gittip/JSFiddle.svg' alt='Gittip'/></td>
