Add support for explicit branches with coveralls service.

--- a/web/index.html
+++ b/web/index.html
@@ -98,10 +98,13 @@ Use an underscore <code>_</code> if you want a space. Or, you know, use a space.
   <td><img src='/gittip/JSFiddle.svg' alt='Gittip'/></td>
   <td><code>http://b.adge.me/gittip/JSFiddle.svg</code></td>
   </tr>
-  <tr><th> Coveralls: </th>
+  <tr><th> Coveralls (repo): </th>
   <td><img src='/coveralls/jekyll/jekyll.svg' alt='Coveralls'/></td>
   <td><code>http://b.adge.me/coveralls/jekyll/jekyll.svg</code></td>
   </tr>
+  <tr><th> Coveralls (branch): </th>
+  <td><img src='/coveralls/jekyll/jekyll/master.svg' alt='Coveralls'/></td>
+  <td><code>http://b.adge.me/coveralls/jekyll/jekyll/master.svg</code></td>
   </tr>
   <tr><th> npm: </th>
   <td><img src='/npm/dm/localeval.svg' alt='npm'/></td>
