Update on the Firefox bug.

--- a/web/index.html
+++ b/web/index.html
@@ -142,7 +142,7 @@ And tell us, we might be able to bring it to you anyway!
     WebKit bug</a>.
   <li> Greenish aura around the text.
   <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=812795'>
-    Known Firefox bug</a>.
+    Known Firefox bug</a>. Fixed in Nightly.
   <li> The text can be wider than the box (esp. Firefox + Windows).
   <a href='https://github.com/espadrine/gh-badges/pull/6#issuecomment-31558269'>
     Issue with consistency of text measurement</a>.
