website: updated contributor list.

--- a/web/index.html
+++ b/web/index.html
@@ -164,6 +164,12 @@ All the activity and the code sits
 <a class='photo' href='https://github.com/mathiasbynens'>
   <img alt='mathiasbynens' src='https://gravatar.com/avatar/24e08a9ea84deb17ae121074d0f17125'>
 </a>
+<a class='photo' href='https://github.com/stefanjudis'>
+  <img alt='stefanjudis' src='https://gravatar.com/avatar/22725c2d3eb331146549bf0d5d3c050c'>
+</a>
+<a class='photo' href='https://github.com/jmalloc'>
+  <img alt='jmalloc' src='https://gravatar.com/avatar/7a6666c5798fb54d1d4ebde0600567f3'>
+</a>
 <a class='photo' href='https://github.com/alrra'>
   <img alt='alrra' src='https://gravatar.com/avatar/2fc3f42c9411898f83f3af8ede902591'>
 </a>
