--- a/web/index.html
+++ b/web/index.html
@@ -18,10 +18,12 @@ th, td { text-align: left; }
 h2::before { content: '☙ '; }
 h2::after { content: ' ❧'; }
 h2 { font-variant: small-caps; }
+hr.spacing { border: 0; display: block; height: 3mm; }
 </style>
 
-<h1> Badge Service For You! </h1>
+<img alt='GitHub Badges' src='/logo.svg'/>
 
+<hr class='spacing'/>
 <hr/>
 <form action='javascript:makeImage()' id='imageMaker'>
   <input name='subject' placeholder='subject'/>
@@ -40,8 +42,9 @@ h2 { font-variant: small-caps; }
   <button>Go!</button>
 </form>
 <hr/>
+<hr class='spacing'/>
 
-<h2> GitHub Badges </h2>
+<h2> Your Badge Service </h2>
 
 <img src='/:badge-on!-brightgreen.svg' alt='Badge on!'/>
 <img src='/:license-CC0-red.svg' alt='License: CC0'/>
