--- a/web/index.html
+++ b/web/index.html
@@ -30,14 +30,14 @@ hr.spacing { border: 0; display: block; height: 3mm; }
   <input name='status' placeholder='status'/>
   <input name='color' list='default-colors' placeholder='color'/>
   <datalist id='default-colors'>
-    <option value='brightgreen'/>
-    <option value='green'/>
-    <option value='yellowgreen'/>
-    <option value='yellow'/>
-    <option value='orange'/>
-    <option value='red'/>
-    <option value='lightgrey'/>
-    <option value='blue'/>
+    <option value='brightgreen'>
+    <option value='green'>
+    <option value='yellowgreen'>
+    <option value='yellow'>
+    <option value='orange'>
+    <option value='red'>
+    <option value='lightgrey'>
+    <option value='blue'>
   </datalist>
   <button>Go!</button>
 </form>
@@ -66,7 +66,7 @@ I wanted a service for everyone. <br/>
 I made the GitHub Badge Service.
 </p>
 
-<img src='/:download-.8 kB-blue.svg' alt='Download: .5kB'/>
+<img src='/:download-.8%20kB-blue.svg' alt='Download: .5kB'/>
 
 <p>
 Here's how it works. <br/>
