--- a/web/index.html
+++ b/web/index.html
@@ -110,6 +110,10 @@ Use an underscore <code>_</code> if you want a space. Or, you know, use a space.
   <td><img src='/coveralls/jekyll/jekyll/master.svg' alt='Coveralls'/></td>
   <td><code>http://b.adge.me/coveralls/jekyll/jekyll/master.svg</code></td>
   </tr>
+  <tr><th> Code Climate: </th>
+  <td><img src='/codeclimate/github/kabisaict/flow.svg' alt='Code Climate'/></td>
+  <td><code>http://b.adge.me/codeclimate/github/kabisaict/flow.svg</code></td>
+  </tr>
   <tr><th> npm: </th>
   <td><img src='/npm/dm/localeval.svg' alt='npm'/></td>
   <td><code>http://b.adge.me/npm/dm/localeval.svg</code></td>
