--- a/web/index.html
+++ b/web/index.html
@@ -114,6 +114,10 @@ Use an underscore <code>_</code> if you want a space. Or, you know, use a space.
   <td><img src='/codeclimate/github/kabisaict/flow.svg' alt='Code Climate'/></td>
   <td><code>http://b.adge.me/codeclimate/github/kabisaict/flow.svg</code></td>
   </tr>
+  <tr><th> Gemnasium: </th>
+  <td><img src='/gemnasium/mathiasbynens/he.svg' alt='Code Climate'/></td>
+  <td><code>http://b.adge.me/gemnasium/mathiasbynens/he.svg</code></td>
+  </tr>
   <tr><th> npm: </th>
   <td><img src='/npm/dm/localeval.svg' alt='npm'/></td>
   <td><code>http://b.adge.me/npm/dm/localeval.svg</code></td>
