Advertise PyPI integration.

--- a/web/index.html
+++ b/web/index.html
@@ -122,6 +122,10 @@ Use an underscore <code>_</code> if you want a space. Or, you know, use a space.
   <td><img src='/npm/dm/localeval.svg' alt='npm'/></td>
   <td><code>http://b.adge.me/npm/dm/localeval.svg</code></td>
   </tr>
+  <tr><th> PyPI: </th>
+  <td><img src='/pypi/dm/nine.svg' alt='PyPI'/></td>
+  <td><code>http://b.adge.me/pypi/dm/nine.svg</code></td>
+  </tr>
   <tr><th> Packagist: </th>
   <td><img src='/packagist/dm/doctrine/orm.svg' alt='Packagist'/></td>
   <td><code>http://b.adge.me/packagist/dm/doctrine/orm.svg</code></td>
