Use PyPI versions.

--- a/web/index.html
+++ b/web/index.html
@@ -134,6 +134,10 @@ Use an underscore <code>_</code> if you want a space. Or, you know, use a space.
   <td><img src='/npm/v/npm.svg' alt='npm'/></td>
   <td><code>http://b.adge.me/npm/v/npm.svg</code></td>
   </tr>
+  <tr><th> PyPI: </th>
+  <td><img src='/pypi/v/nine.svg' alt='PyPI'/></td>
+  <td><code>http://b.adge.me/pypi/v/nine.svg</code></td>
+  </tr>
   <tr><th> Gem: </th>
   <td><img src='/gem/v/formatador.svg' alt='Gem'/></td>
   <td><code>http://b.adge.me/gem/v/formatador.svg</code></td>
