--- a/web/index.html
+++ b/web/index.html
@@ -70,7 +70,7 @@ I made the GitHub Badge Service.
 
 <p>
 Here's how it works. <br/>
-<code>http://b.adge.me/badge/&lt;SUBJECT&gt;-&lt;STATUS&gt;-&lt;COLOR&gt;.svg</code><br/>
+<code>http://img.shields.io/badge/&lt;SUBJECT&gt;-&lt;STATUS&gt;-&lt;COLOR&gt;.svg</code><br/>
 Use two dashes <code>--</code> to have one dash as text. <br/>
 Use two underscores <code>__</code> to have one underscore as text. <br/>
 Use an underscore <code>_</code> if you want a space. Or, you know, use a space.
@@ -92,55 +92,55 @@ Use an underscore <code>_</code> if you want a space. Or, you know, use a space.
 <table><tbody>
   <tr><th> Travis (repo): </th>
   <td><img src='/travis/joyent/node.svg' alt='Travis-CI'/></td>
-  <td><code>http://b.adge.me/travis/joyent/node.svg</code></td>
+  <td><code>http://img.shields.io/travis/joyent/node.svg</code></td>
   </tr>
   <tr><th> Travis (branch): </th>
   <td><img src='/travis/joyent/node/v0.6.svg' alt='Travis-CI'/></td>
-  <td><code>http://b.adge.me/travis/joyent/node/v0.6.svg</code></td>
+  <td><code>http://img.shields.io/travis/joyent/node/v0.6.svg</code></td>
   </tr>
   <tr><th> Gittip: </th>
   <td><img src='/gittip/JSFiddle.svg' alt='Gittip'/></td>
-  <td><code>http://b.adge.me/gittip/JSFiddle.svg</code></td>
+  <td><code>http://img.shields.io/gittip/JSFiddle.svg</code></td>
   </tr>
   <tr><th> Coveralls (repo): </th>
   <td><img src='/coveralls/jekyll/jekyll.svg' alt='Coveralls'/></td>
-  <td><code>http://b.adge.me/coveralls/jekyll/jekyll.svg</code></td>
+  <td><code>http://img.shields.io/coveralls/jekyll/jekyll.svg</code></td>
   </tr>
   <tr><th> Coveralls (branch): </th>
   <td><img src='/coveralls/jekyll/jekyll/master.svg' alt='Coveralls'/></td>
-  <td><code>http://b.adge.me/coveralls/jekyll/jekyll/master.svg</code></td>
+  <td><code>http://img.shields.io/coveralls/jekyll/jekyll/master.svg</code></td>
   </tr>
   <tr><th> Code Climate: </th>
   <td><img src='/codeclimate/github/kabisaict/flow.svg' alt='Code Climate'/></td>
-  <td><code>http://b.adge.me/codeclimate/github/kabisaict/flow.svg</code></td>
+  <td><code>http://img.shields.io/codeclimate/github/kabisaict/flow.svg</code></td>
   </tr>
   <tr><th> Gemnasium: </th>
   <td><img src='/gemnasium/mathiasbynens/he.svg' alt='Code Climate'/></td>
-  <td><code>http://b.adge.me/gemnasium/mathiasbynens/he.svg</code></td>
+  <td><code>http://img.shields.io/gemnasium/mathiasbynens/he.svg</code></td>
   </tr>
   <tr><th> npm: </th>
   <td><img src='/npm/dm/localeval.svg' alt='npm'/></td>
-  <td><code>http://b.adge.me/npm/dm/localeval.svg</code></td>
+  <td><code>http://img.shields.io/npm/dm/localeval.svg</code></td>
   </tr>
   <tr><th> PyPI: </th>
   <td><img src='/pypi/dm/nine.svg' alt='PyPI'/></td>
-  <td><code>http://b.adge.me/pypi/dm/nine.svg</code></td>
+  <td><code>http://img.shields.io/pypi/dm/nine.svg</code></td>
   </tr>
   <tr><th> Packagist: </th>
   <td><img src='/packagist/dm/doctrine/orm.svg' alt='Packagist'/></td>
-  <td><code>http://b.adge.me/packagist/dm/doctrine/orm.svg</code></td>
+  <td><code>http://img.shields.io/packagist/dm/doctrine/orm.svg</code></td>
   </tr>
   <tr><th> npm: </th>
   <td><img src='/npm/v/npm.svg' alt='npm'/></td>
-  <td><code>http://b.adge.me/npm/v/npm.svg</code></td>
+  <td><code>http://img.shields.io/npm/v/npm.svg</code></td>
   </tr>
   <tr><th> PyPI: </th>
   <td><img src='/pypi/v/nine.svg' alt='PyPI'/></td>
-  <td><code>http://b.adge.me/pypi/v/nine.svg</code></td>
+  <td><code>http://img.shields.io/pypi/v/nine.svg</code></td>
   </tr>
   <tr><th> Gem: </th>
   <td><img src='/gem/v/formatador.svg' alt='Gem'/></td>
-  <td><code>http://b.adge.me/gem/v/formatador.svg</code></td>
+  <td><code>http://img.shields.io/gem/v/formatador.svg</code></td>
   </tr>
 </tbody></table>
 
