Succinct index page.

--- a/web/index.html
+++ b/web/index.html
@@ -46,34 +46,12 @@ hr.spacing { border: 0; display: block; height: 3mm; }
 
 <h2> Your Badge Service </h2>
 
-<img src='/badge/badge-on!-brightgreen.svg' alt='Badge on!'/>
-<img src='/badge/license-CC0-red.svg' alt='License: CC0'/>
-
 <p>
-Ever wanted to have your own GitHub badges? <br/>
-Maybe you simply wanted to have consistent colors? <br/>
-Maybe you wanted to have them be less blurry? <br/>
-Or look better on high-resolution displays? <br/>
-Maybe you simply love SVG. <br/>
-Maybe you fancy a format that uses less than half the bandwidth.
-</p>
-
-<img src='/badge/happy-hacking%20%E2%98%BA-yellow.svg' alt='Happy hacking!'/>
-
-<p>
-As for me, I wanted a format that people can reuse and hack on. <br/>
-I wanted a service for everyone. <br/>
-I made the GitHub Badge Service.
-</p>
-
-<img src='/badge/download-.8%20kB-blue.svg' alt='Download: .5kB'/>
-
-<p>
-Here's how it works. <br/>
-<code>http://img.shields.io/badge/&lt;SUBJECT&gt;-&lt;STATUS&gt;-&lt;COLOR&gt;.svg</code><br/>
-Use two dashes <code>--</code> to have one dash as text. <br/>
-Use two underscores <code>__</code> to have one underscore as text. <br/>
-Use an underscore <code>_</code> if you want a space. Or, you know, use a space.
+<code>http://img.shields.io/badge/&lt;SUBJECT&gt;-&lt;STATUS&gt;-&lt;COLOR&gt;.svg</code>
+</p><p>
+Dashes <code>--</code> → <code>-</code> Dash <br/>
+Underscores <code>__</code> → <code>_</code> Underscore <br/>
+<code>_</code> or Space <code> </code> → <code> </code> Space
 </p>
 
 <p> Colors: </p>
@@ -86,6 +64,27 @@ Use an underscore <code>_</code> if you want a space. Or, you know, use a space.
 <img src='/badge/color-lightgrey-lightgrey.svg' alt='lightgrey'/>
 <img src='/badge/color-blue-blue.svg' alt='blue'/>
 <img src='/badge/color-ff69b4-ff69b4.svg' alt='ff69b4'/>
+
+<img src='/badge/license-CC0-red.svg' alt='License: CC0'/>
+
+<p>
+Ever wanted to have your own GitHub badges? <br/>
+Maybe you simply wanted visual consistency? <br/>
+Maybe you wanted less blur? <br/>
+Or look good on high-res displays? <br/>
+Maybe you simply love SVG. <br/>
+And you like the smaller download.
+</p>
+
+<img src='/badge/download-.8%20kB-blue.svg' alt='Download: .5kB'/>
+
+<p>
+I wanted a format that people can reuse and hack on. <br/>
+I wanted a service for everyone. <br/>
+I made the GitHub Badge Service.
+</p>
+
+<img src='/badge/badge-on!-brightgreen.svg' alt='Badge on!'/>
 
 <h2> Supported Services </h2>
 
@@ -151,29 +150,12 @@ Tell your favorite badge service to use it! <br/>
 And tell us, we might be able to bring it to you anyway!
 </p>
 
-<h2> Known Issues </h2>
-
-<ul>
-  <li> Chrome/Opera + retina display = blurry.
-  <a href='https://code.google.com/p/chromium/issues/detail?id=331387'>
-    Known Blink bug</a>.
-  <li> Safari + retina display = blurry.
-  <a href='https://bugs.webkit.org/show_bug.cgi?id=126398'>Known
-    WebKit bug</a>.
-  <li> Greenish aura around the text.
-  <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=812795'>
-    Known Firefox bug</a>. Fixed in Nightly.
-  <li> The text can be wider than the box (esp. Firefox + Windows).
-  <a href='https://github.com/espadrine/gh-badges/pull/6#issuecomment-31558269'>
-    Issue with consistency of text measurement</a>.
-</ul>
-
 <h2> Origin </h2>
 
 <p>
 <a href='https://github.com/h5bp/lazyweb-requests/issues/150'>This</a>.<br/>
 All the activity and the code sits
-<a href='https://github.com/espadrine/gh-badges'>here</a>.
+<a href='https://github.com/badges/gh-badges'>here</a>.
 </p>
 
 <h2> Contributors </h2>
