--- a/web/index.html
+++ b/web/index.html
@@ -175,6 +175,40 @@ All the activity and the code sits
 <a class='photo' href='https://github.com/alrra'>
   <img alt='alrra' src='https://gravatar.com/avatar/2fc3f42c9411898f83f3af8ede902591'>
 </a>
+<a class='photo' href='https://github.com/ezzatron'>
+  <img alt='ezzatron' src='https://gravatar.com/avatar/95ce5a53e68fe5287fadde649da8c6c7'>
+</a>
+<br>
+<a class='photo' href='https://github.com/nathany'>
+  <img alt='nathany' src='https://gravatar.com/avatar/7d0978b275a362d11283396a929aee65'>
+</a>
+<a class='photo' href='https://github.com/whit537'>
+  <img alt='whit537' src='https://gravatar.com/avatar/fb054b407a6461e417ee6b6ae084da37'>
+</a>
+<a class='photo' href='https://github.com/olivierlacan'>
+  <img alt='olivierlacan' src='https://gravatar.com/avatar/6e77509d7891c1d2230f3240a5652b6e'>
+</a>
+<a class='photo' href='https://github.com/Mikulas'>
+  <img alt='Mikulas' src='https://gravatar.com/avatar/daa06ea257d7820ff84735a55b931ec8'>
+</a>
+<a class='photo' href='https://github.com/kura'>
+  <img alt='kura' src='https://gravatar.com/avatar/6db32988bd24b2f19231a7e88a74455a'>
+</a>
+<a class='photo' href='https://github.com/cainus'>
+  <img alt='cainus' src='https://gravatar.com/avatar/c8475420ebca73833e55ccf57d8d7500'>
+</a>
+<a class='photo' href='https://github.com/jbowes'>
+  <img alt='jbowes' src='https://gravatar.com/avatar/363ada7cda10d5eae5eeb7704278fb51'>
+</a>
+<a class='photo' href='https://github.com/rafalchmiel'>
+  <img alt='rafalchmiel' src='https://gravatar.com/avatar/6dd56028986d5e6c478e649ec229092b'>
+</a>
+<a class='photo' href='https://github.com/fjcaetano'>
+  <img alt='fjcaetano' src='https://gravatar.com/avatar/3b339db885930633b86d73b97a2ca1c0'>
+</a>
+<a class='photo' href='https://github.com/hughsk'>
+  <img alt='hughsk' src='https://gravatar.com/avatar/133cd05eb39521d55fb7a08c787925e2'>
+</a>
 
 <p><small>:wq</small></p>
 <script>
