--- a/web/index.html
+++ b/web/index.html
@@ -90,11 +90,11 @@ I made the GitHub Badge Service.
 <h2> Supported Services </h2>
 
 <table><tbody>
-  <tr><th> Travis (repo): </th>
+  <tr><th> Travis: </th>
   <td><img src='/travis/joyent/node.svg' alt='Travis-CI'/></td>
   <td><code>http://img.shields.io/travis/joyent/node.svg</code></td>
   </tr>
-  <tr><th> Travis (branch): </th>
+  <tr><th> Travis branch: </th>
   <td><img src='/travis/joyent/node/v0.6.svg' alt='Travis-CI'/></td>
   <td><code>http://img.shields.io/travis/joyent/node/v0.6.svg</code></td>
   </tr>
@@ -102,11 +102,11 @@ I made the GitHub Badge Service.
   <td><img src='/gittip/JSFiddle.svg' alt='Gittip'/></td>
   <td><code>http://img.shields.io/gittip/JSFiddle.svg</code></td>
   </tr>
-  <tr><th> Coveralls (repo): </th>
+  <tr><th> Coveralls: </th>
   <td><img src='/coveralls/jekyll/jekyll.svg' alt='Coveralls'/></td>
   <td><code>http://img.shields.io/coveralls/jekyll/jekyll.svg</code></td>
   </tr>
-  <tr><th> Coveralls (branch): </th>
+  <tr><th> Coveralls branch: </th>
   <td><img src='/coveralls/jekyll/jekyll/master.svg' alt='Coveralls'/></td>
   <td><code>http://img.shields.io/coveralls/jekyll/jekyll/master.svg</code></td>
   </tr>
@@ -115,7 +115,7 @@ I made the GitHub Badge Service.
   <td><code>http://img.shields.io/codeclimate/github/kabisaict/flow.svg</code></td>
   </tr>
   <tr><th> Gemnasium: </th>
-  <td><img src='/gemnasium/mathiasbynens/he.svg' alt='Code Climate'/></td>
+  <td><img src='/gemnasium/mathiasbynens/he.svg' alt='Gemnasium'/></td>
   <td><code>http://img.shields.io/gemnasium/mathiasbynens/he.svg</code></td>
   </tr>
   <tr><th> npm: </th>
@@ -123,8 +123,8 @@ I made the GitHub Badge Service.
   <td><code>http://img.shields.io/npm/dm/localeval.svg</code></td>
   </tr>
   <tr><th> PyPI: </th>
-  <td><img src='/pypi/dm/nine.svg' alt='PyPI'/></td>
-  <td><code>http://img.shields.io/pypi/dm/nine.svg</code></td>
+  <td><img src='/pypi/dm/Django.svg' alt='PyPI'/></td>
+  <td><code>http://img.shields.io/pypi/dm/Django.svg</code></td>
   </tr>
   <tr><th> Packagist: </th>
   <td><img src='/packagist/dm/doctrine/orm.svg' alt='Packagist'/></td>
