Add Hackage support!

--- a/web/index.html
+++ b/web/index.html
@@ -141,6 +141,9 @@ I made the GitHub Badge Service.
   <tr><th> Gem: </th>
   <td><img src='/gem/v/formatador.svg' alt='Gem'/></td>
   <td><code>http://img.shields.io/gem/v/formatador.svg</code></td>
+  <tr><th> Hackage: </th>
+  <td><img src='/hackage/v/lens.svg' alt='Gem'/></td>
+  <td><code>http://img.shields.io/hackage/v/lens.svg</code></td>
   </tr>
 </tbody></table>
 
