--- a/web/index.html
+++ b/web/index.html
@@ -91,58 +91,58 @@ I made the GitHub Badge Service.
 
 <table><tbody>
   <tr><th> Travis: </th>
-  <td><img src='/travis/joyent/node.svg' alt='Travis-CI'/></td>
+  <td><img src='/travis/joyent/node.svg' alt=''/></td>
   <td><code>http://img.shields.io/travis/joyent/node.svg</code></td>
   </tr>
   <tr><th> Travis branch: </th>
-  <td><img src='/travis/joyent/node/v0.6.svg' alt='Travis-CI'/></td>
+  <td><img src='/travis/joyent/node/v0.6.svg' alt=''/></td>
   <td><code>http://img.shields.io/travis/joyent/node/v0.6.svg</code></td>
   </tr>
   <tr><th> Gittip: </th>
-  <td><img src='/gittip/JSFiddle.svg' alt='Gittip'/></td>
+  <td><img src='/gittip/JSFiddle.svg' alt=''/></td>
   <td><code>http://img.shields.io/gittip/JSFiddle.svg</code></td>
   </tr>
   <tr><th> Coveralls: </th>
-  <td><img src='/coveralls/jekyll/jekyll.svg' alt='Coveralls'/></td>
+  <td><img src='/coveralls/jekyll/jekyll.svg' alt=''/></td>
   <td><code>http://img.shields.io/coveralls/jekyll/jekyll.svg</code></td>
   </tr>
   <tr><th> Coveralls branch: </th>
-  <td><img src='/coveralls/jekyll/jekyll/master.svg' alt='Coveralls'/></td>
+  <td><img src='/coveralls/jekyll/jekyll/master.svg' alt=''/></td>
   <td><code>http://img.shields.io/coveralls/jekyll/jekyll/master.svg</code></td>
   </tr>
   <tr><th> Code Climate: </th>
-  <td><img src='/codeclimate/github/kabisaict/flow.svg' alt='Code Climate'/></td>
+  <td><img src='/codeclimate/github/kabisaict/flow.svg' alt=''/></td>
   <td><code>http://img.shields.io/codeclimate/github/kabisaict/flow.svg</code></td>
   </tr>
   <tr><th> Gemnasium: </th>
-  <td><img src='/gemnasium/mathiasbynens/he.svg' alt='Gemnasium'/></td>
+  <td><img src='/gemnasium/mathiasbynens/he.svg' alt=''/></td>
   <td><code>http://img.shields.io/gemnasium/mathiasbynens/he.svg</code></td>
   </tr>
   <tr><th> npm: </th>
-  <td><img src='/npm/dm/localeval.svg' alt='npm'/></td>
+  <td><img src='/npm/dm/localeval.svg' alt=''/></td>
   <td><code>http://img.shields.io/npm/dm/localeval.svg</code></td>
   </tr>
   <tr><th> PyPI: </th>
-  <td><img src='/pypi/dm/Django.svg' alt='PyPI'/></td>
+  <td><img src='/pypi/dm/Django.svg' alt=''/></td>
   <td><code>http://img.shields.io/pypi/dm/Django.svg</code></td>
   </tr>
   <tr><th> Packagist: </th>
-  <td><img src='/packagist/dm/doctrine/orm.svg' alt='Packagist'/></td>
+  <td><img src='/packagist/dm/doctrine/orm.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/dm/doctrine/orm.svg</code></td>
   </tr>
   <tr><th> npm: </th>
-  <td><img src='/npm/v/npm.svg' alt='npm'/></td>
+  <td><img src='/npm/v/npm.svg' alt=''/></td>
   <td><code>http://img.shields.io/npm/v/npm.svg</code></td>
   </tr>
   <tr><th> PyPI: </th>
-  <td><img src='/pypi/v/nine.svg' alt='PyPI'/></td>
+  <td><img src='/pypi/v/nine.svg' alt=''/></td>
   <td><code>http://img.shields.io/pypi/v/nine.svg</code></td>
   </tr>
   <tr><th> Gem: </th>
-  <td><img src='/gem/v/formatador.svg' alt='Gem'/></td>
+  <td><img src='/gem/v/formatador.svg' alt=''/></td>
   <td><code>http://img.shields.io/gem/v/formatador.svg</code></td>
   <tr><th> Hackage: </th>
-  <td><img src='/hackage/v/lens.svg' alt='Hackage'/></td>
+  <td><img src='/hackage/v/lens.svg' alt=''/></td>
   <td><code>http://img.shields.io/hackage/v/lens.svg</code></td>
   </tr>
 </tbody></table>
