--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@ I made the GitHub Badge Service.
   <td><img src='/hackage/v/lens.svg' alt=''/></td>
   <td><code>http://img.shields.io/hackage/v/lens.svg</code></td>
   </tr>
+  <tr><th> Packagist: </th>
+  <td><img src='/packagist/v/symfony/symfony.svg' alt=''/></td>
+  <td><code>http://img.shields.io/packagist/v/symfony/symfony.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2> Like This? </h2>
