Website: use img.shields.io

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ h2 { font-variant: small-caps; }
 hr.spacing { border: 0; display: block; height: 3mm; }
 </style>
 
-<img alt='GitHub Badges' src='/logo.svg'/>
+<img alt='GitHub Badges' src='logo.svg'/>
 
 <hr class='spacing'/>
 <hr/>
@@ -55,18 +55,18 @@ Underscores <code>__</code> → <code>_</code> Underscore <br/>
 </p>
 
 <p>
-<img src='/badge/color-brightgreen-brightgreen.svg' alt='brightgreen'/>
-<img src='/badge/color-green-green.svg' alt='green'/>
-<img src='/badge/color-yellowgreen-yellowgreen.svg' alt='yellowgreen'/>
-<img src='/badge/color-yellow-yellow.svg' alt='yellow'/>
-<img src='/badge/color-orange-orange.svg' alt='orange'/>
-<img src='/badge/color-red-red.svg' alt='red'/>
-<img src='/badge/color-lightgrey-lightgrey.svg' alt='lightgrey'/>
-<img src='/badge/color-blue-blue.svg' alt='blue'/>
-<img src='/badge/color-ff69b4-ff69b4.svg' alt='ff69b4'/>
+<img src='//img.shields.io/badge/color-brightgreen-brightgreen.svg' alt='brightgreen'/>
+<img src='//img.shields.io/badge/color-green-green.svg' alt='green'/>
+<img src='//img.shields.io/badge/color-yellowgreen-yellowgreen.svg' alt='yellowgreen'/>
+<img src='//img.shields.io/badge/color-yellow-yellow.svg' alt='yellow'/>
+<img src='//img.shields.io/badge/color-orange-orange.svg' alt='orange'/>
+<img src='//img.shields.io/badge/color-red-red.svg' alt='red'/>
+<img src='//img.shields.io/badge/color-lightgrey-lightgrey.svg' alt='lightgrey'/>
+<img src='//img.shields.io/badge/color-blue-blue.svg' alt='blue'/>
+<img src='//img.shields.io/badge/color-ff69b4-ff69b4.svg' alt='ff69b4'/>
 </p>
 
-<img src='/badge/license-CC0-red.svg' alt='License: CC0'/>
+<img src='//img.shields.io/badge/license-CC0-red.svg' alt='License: CC0'/>
 
 <p>
 Ever wanted to have your own GitHub badges? <br/>
@@ -77,7 +77,7 @@ Maybe you simply love SVG. <br/>
 And you like the smaller download.
 </p>
 
-<img src='/badge/download-.8%20kB-blue.svg' alt='Download: .5kB'/>
+<img src='//img.shields.io/badge/download-.8%20kB-blue.svg' alt='Download: .5kB'/>
 
 <p>
 I wanted a format that people can reuse and hack on. <br/>
@@ -85,68 +85,68 @@ I wanted a service for everyone. <br/>
 I made the GitHub Badge Service.
 </p>
 
-<img src='/badge/badge-on!-brightgreen.svg' alt='Badge on!'/>
+<img src='//img.shields.io/badge/badge-on!-brightgreen.svg' alt='Badge on!'/>
 
 <h2> Supported Services </h2>
 
 <table><tbody>
   <tr><th> Travis: </th>
-  <td><img src='/travis/joyent/node.svg' alt=''/></td>
+  <td><img src='//img.shields.io/travis/joyent/node.svg' alt=''/></td>
   <td><code>http://img.shields.io/travis/joyent/node.svg</code></td>
   </tr>
   <tr><th> Travis branch: </th>
-  <td><img src='/travis/joyent/node/v0.6.svg' alt=''/></td>
+  <td><img src='//img.shields.io/travis/joyent/node/v0.6.svg' alt=''/></td>
   <td><code>http://img.shields.io/travis/joyent/node/v0.6.svg</code></td>
   </tr>
   <tr><th> Gittip: </th>
-  <td><img src='/gittip/JSFiddle.svg' alt=''/></td>
+  <td><img src='//img.shields.io/gittip/JSFiddle.svg' alt=''/></td>
   <td><code>http://img.shields.io/gittip/JSFiddle.svg</code></td>
   </tr>
   <tr><th> Coveralls: </th>
-  <td><img src='/coveralls/jekyll/jekyll.svg' alt=''/></td>
+  <td><img src='//img.shields.io/coveralls/jekyll/jekyll.svg' alt=''/></td>
   <td><code>http://img.shields.io/coveralls/jekyll/jekyll.svg</code></td>
   </tr>
   <tr><th> Coveralls branch: </th>
-  <td><img src='/coveralls/jekyll/jekyll/master.svg' alt=''/></td>
+  <td><img src='//img.shields.io/coveralls/jekyll/jekyll/master.svg' alt=''/></td>
   <td><code>http://img.shields.io/coveralls/jekyll/jekyll/master.svg</code></td>
   </tr>
   <tr><th> Code Climate: </th>
-  <td><img src='/codeclimate/github/kabisaict/flow.svg' alt=''/></td>
+  <td><img src='//img.shields.io/codeclimate/github/kabisaict/flow.svg' alt=''/></td>
   <td><code>http://img.shields.io/codeclimate/github/kabisaict/flow.svg</code></td>
   </tr>
   <tr><th> Gemnasium: </th>
-  <td><img src='/gemnasium/mathiasbynens/he.svg' alt=''/></td>
+  <td><img src='//img.shields.io/gemnasium/mathiasbynens/he.svg' alt=''/></td>
   <td><code>http://img.shields.io/gemnasium/mathiasbynens/he.svg</code></td>
   </tr>
   <tr><th> npm: </th>
-  <td><img src='/npm/dm/localeval.svg' alt=''/></td>
+  <td><img src='//img.shields.io/npm/dm/localeval.svg' alt=''/></td>
   <td><code>http://img.shields.io/npm/dm/localeval.svg</code></td>
   </tr>
   <tr><th> PyPI: </th>
-  <td><img src='/pypi/dm/Django.svg' alt=''/></td>
+  <td><img src='//img.shields.io/pypi/dm/Django.svg' alt=''/></td>
   <td><code>http://img.shields.io/pypi/dm/Django.svg</code></td>
   </tr>
   <tr><th> Packagist: </th>
-  <td><img src='/packagist/dm/doctrine/orm.svg' alt=''/></td>
+  <td><img src='//img.shields.io/packagist/dm/doctrine/orm.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/dm/doctrine/orm.svg</code></td>
   </tr>
   <tr><th> npm: </th>
-  <td><img src='/npm/v/npm.svg' alt=''/></td>
+  <td><img src='//img.shields.io/npm/v/npm.svg' alt=''/></td>
   <td><code>http://img.shields.io/npm/v/npm.svg</code></td>
   </tr>
   <tr><th> PyPI: </th>
-  <td><img src='/pypi/v/nine.svg' alt=''/></td>
+  <td><img src='//img.shields.io/pypi/v/nine.svg' alt=''/></td>
   <td><code>http://img.shields.io/pypi/v/nine.svg</code></td>
   </tr>
   <tr><th> Gem: </th>
-  <td><img src='/gem/v/formatador.svg' alt=''/></td>
+  <td><img src='//img.shields.io/gem/v/formatador.svg' alt=''/></td>
   <td><code>http://img.shields.io/gem/v/formatador.svg</code></td>
   <tr><th> Hackage: </th>
-  <td><img src='/hackage/v/lens.svg' alt=''/></td>
+  <td><img src='//img.shields.io/hackage/v/lens.svg' alt=''/></td>
   <td><code>http://img.shields.io/hackage/v/lens.svg</code></td>
   </tr>
   <tr><th> Packagist: </th>
-  <td><img src='/packagist/v/symfony/symfony.svg' alt=''/></td>
+  <td><img src='//img.shields.io/packagist/v/symfony/symfony.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/v/symfony/symfony.svg</code></td>
   </tr>
 </tbody></table>
