Separate vendors in categories.
Version, downloads, miscellaneous.

--- a/try.html
+++ b/try.html
@@ -89,6 +89,7 @@ I made the GitHub Badge Service.
 
 <h2> Supported Services </h2>
 
+<h3> Miscellaneous </h3>
 <table><tbody>
   <tr><th> Travis: </th>
   <td><img src='/travis/joyent/node.svg' alt=''/></td>
@@ -118,6 +119,9 @@ I made the GitHub Badge Service.
   <td><img src='/gemnasium/mathiasbynens/he.svg' alt=''/></td>
   <td><code>http://img.shields.io/gemnasium/mathiasbynens/he.svg</code></td>
   </tr>
+</tbody></table>
+<h3> Downloads </h3>
+<table><tbody>
   <tr><th> npm: </th>
   <td><img src='/npm/dm/localeval.svg' alt=''/></td>
   <td><code>http://img.shields.io/npm/dm/localeval.svg</code></td>
@@ -130,6 +134,9 @@ I made the GitHub Badge Service.
   <td><img src='/packagist/dm/doctrine/orm.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/dm/doctrine/orm.svg</code></td>
   </tr>
+</tbody></table>
+<h3> Version </h3>
+<table><tbody>
   <tr><th> npm: </th>
   <td><img src='/npm/v/npm.svg' alt=''/></td>
   <td><code>http://img.shields.io/npm/v/npm.svg</code></td>
