--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ hr.spacing { border: 0; display: block; height: 3mm; }
 <h2> Your Badge Service </h2>
 
 <p>
-<code><span id="imgUrlPrefix">http://img.shields.io/badge/</span>&lt;SUBJECT&gt;-&lt;STATUS&gt;-&lt;COLOR&gt;.svg</code>
+<code><span id='imgUrlPrefix'>http://img.shields.io/badge/</span>&lt;SUBJECT&gt;-&lt;STATUS&gt;-&lt;COLOR&gt;.svg</code>
 </p><p>
 Dashes <code>--</code> → <code>-</code> Dash <br/>
 Underscores <code>__</code> → <code>_</code> Underscore <br/>
