Percent-encode arguments to example URL generator
Otherwise using characters like `?` will lead to a 404.

--- a/try.html
+++ b/try.html
@@ -228,7 +228,7 @@ All the activity and the code sits
 <p><small>:wq</small></p>
 <script>
 function escapeField(s) {
-  return s.replace(/-/g, '--').replace(/_/g, '__');
+  return encodeURIComponent(s.replace(/-/g, '--').replace(/_/g, '__'));
 }
 function makeImage() {
   var url = document.getElementById('imgUrlPrefix').textContent;
