Add CocoaPods version integration

--- a/try.html
+++ b/try.html
@@ -156,6 +156,10 @@ I made the GitHub Badge Service.
   <td><img src='/packagist/v/symfony/symfony.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/v/symfony/symfony.svg</code></td>
   </tr>
+  <tr><th> CocoaPods: </th>
+  <td><img src='/cocoapods/v/AFNetworking.svg' alt='' /></td>
+  <td><code>http://img.shields.io/cocoapods/v/AFNetworking.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2> Like This? </h2>
